--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learn-reactjs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://namthit98.github.io/test-reactjs",
+  "homepage": "https://namthit98.github.io/todo-app-reactjs",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "lodash": "^4.17.11",
